--- a/vignettes/simulateEstimateLBSPRDome.Rmd
+++ b/vignettes/simulateEstimateLBSPRDome.Rmd
@@ -1,8 +1,16 @@
 ---
-title: "GTGLBSPRDome_SimulateEstimate.R"
-author: "Colm Fitzgerald"
-date: "9/22/2021"
-output: html_document
+title: "LBSPRDome: An extension of LBSPR package to include dome-shaped selectivity curves"
+author: "Kristiina Hommik and Colm Fitzgerald"
+date: "`r Sys.Date()`"
+output: 
+  html_document:
+    number_sections: true
+    toc: yes
+    toc_float: true
+vignette: >
+  %\VignetteIndexEntry{LBSPRDome: An extension of LBSPR package to include dome-shaped selectivity curves}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r packages_preliminaries, include = FALSE}
